--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Set up Git
         run: |
-          git config --global user.name 'your-github-username'
-          git config --global user.email 'your-email@example.com'
+          git config --global user.name 'CaioBarretoo'
+          git config --global user.email 'caio.barret@hotmail.com'
 
       - name: Commit and push changes
         run: |
