--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "postinstall": "npm rebuild sqlite3 --build-from-source"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "sqlite3": "^5.1.6"
   }
-
 }
